trained detr-resnet-50 model weights

--- a/NewModel.ipynb
+++ b/NewModel.ipynb
@@ -169,7 +169,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"input_data/butterfly_anomaly_train.csv\")\n",
+    "df = pd.read_csv(\"../input_data/butterfly_anomaly_train.csv\")\n",
     "df.head()"
    ]
   },
@@ -350,7 +350,7 @@
    ],
    "source": [
     "# write the dataframe back to the file\n",
-    "df.to_csv(\"input_data/butterfly_anomaly_train.csv\", index=False)\n",
+    "df.to_csv(\"../input_data/butterfly_anomaly_train.csv\", index=False)\n",
     "df.head()\n"
    ]
   },
@@ -505,8 +505,7 @@
    "source": [
     "# Get stratified 15% of the training images for sample run (should take about 12 minutes to download),\n",
     "# update \"test_size\" to select more or less sample images.\n",
-    "X_train, X_test = train_test_split(df, test_si\n",
-    "                                   ze = 0.2, stratify = df[\"classification\"], random_state = 1)\n",
+    "X_train, X_test = train_test_split(df, test_size = 0.2, stratify = df[\"classification\"], random_state = 1)\n",
     "\n",
     "print(df.__len__())\n",
     "print(X_train.info())\n",
@@ -533,7 +532,7 @@
     "import csv\n",
     "from pathlib import Path\n",
     "# Add your path of library\n",
-    "sys.path.append('../DINO_train')\n",
+    "sys.path.append('My_model')\n",
     "import training"
    ]
   },
@@ -551,14 +550,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filtering bad urls: 2082it [00:02, 942.17it/s] "
+      "Filtering bad urls: 2082it [00:01, 1526.12it/s]"
      ]
     },
     {
@@ -605,9 +604,9 @@
    ],
    "source": [
     "# training.DATA_FILE = Path('./sample_annotation.csv')\n",
-    "training.DATA_FILE = Path('input_data/butterfly_anomaly_train.csv')\n",
+    "training.DATA_FILE = Path('../input_data/butterfly_anomaly_train.csv')\n",
     "# training.IMG_DIR = Path('./sample_images')\n",
-    "training.IMG_DIR = Path('input_data/both')\n",
+    "training.IMG_DIR = Path('../input_data/both')\n",
     "train_data, test_data = training.load_data(training.DATA_FILE, training.IMG_DIR)\n",
     "print(train_data.head())"
    ]
@@ -621,9 +620,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd8f6247661e4b4499647d5ecfbf733a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/102M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Admin-62501\\anaconda3\\envs\\butterfly-detection\\lib\\site-packages\\huggingface_hub\\file_download.py:140: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Admin-62501\\.cache\\huggingface\\hub\\models--timm--resnet50.a1_in1k. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "Some weights of the model checkpoint at facebook/detr-resnet-50 were not used when initializing DetrForObjectDetection: ['model.backbone.conv_encoder.model.layer1.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer2.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer3.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer4.0.downsample.1.num_batches_tracked']\n",
+      "- This IS expected if you are initializing DetrForObjectDetection from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing DetrForObjectDetection from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -634,7 +659,7 @@
    ],
    "source": [
     "training.DEVICE='cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "model = training.get_dino_model(dino_name='facebook/dinov2-base').to(training.DEVICE)\n",
+    "model = training.get_detrResnet_model(name='facebook/detr-resnet-50').to(training.DEVICE)\n",
     "training.BATCH_SIZE = 4\n",
     "\n",
     "# Location to save checkpoints and results\n",
@@ -653,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -662,8 +687,8 @@
      "text": [
       "Created base dataset with 1665 samples\n",
       "Created base dataset with 417 samples\n",
-      "<torch.utils.data.dataloader.DataLoader object at 0x00000131751E6320>\n",
-      "<torch.utils.data.dataloader.DataLoader object at 0x000001317525D2A0>\n"
+      "<torch.utils.data.dataloader.DataLoader object at 0x0000018671513AC0>\n",
+      "<torch.utils.data.dataloader.DataLoader object at 0x000001860002B220>\n"
      ]
     }
    ],
@@ -676,34 +701,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting features: 100%|██████████| 417/417 [17:59<00:00,  2.59s/it]\n",
-      "Extracting features: 100%|██████████| 105/105 [05:04<00:00,  2.90s/it]"
+      "Extracting features: 100%|██████████| 417/417 [10:41<00:00,  1.54s/it]\n",
+      "Extracting features: 100%|██████████| 105/105 [02:38<00:00,  1.51s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.07480468  1.0148212  -0.44328105 ... -1.3911552  -0.78655094\n",
-      "  -0.7207247 ]\n",
-      " [-2.799437    1.1824923  -2.1693401  ... -1.4877348  -1.2589675\n",
-      "  -0.4212661 ]\n",
-      " [-1.6104      0.00404462 -2.7286115  ... -0.66142565 -0.59261125\n",
-      "  -0.61701185]\n",
+      "[[-15.542916    -0.91045094  -7.36014    ...  -8.97842     -5.407525\n",
+      "    7.603818  ]\n",
+      " [-14.988806    -0.91125643  -5.5944624  ...  -3.4682074   -0.01910743\n",
+      "    6.888975  ]\n",
+      " [-15.784734     3.8314717   -6.208378   ... -10.686158    -5.603228\n",
+      "    6.7690516 ]\n",
       " ...\n",
-      " [-3.4467356   0.54792047 -1.8496662  ... -1.0453129  -1.5139419\n",
-      "  -0.4645679 ]\n",
-      " [-2.593028    1.152011   -2.428368   ... -1.0441059  -1.797775\n",
-      "  -0.37309414]\n",
-      " [-3.5681794   0.9330046  -1.8699456  ... -1.5799365  -1.3101511\n",
-      "  -0.8292255 ]]\n"
+      " [-15.173181     1.2875555   -3.8539486  ...  -5.5410814   -0.65423435\n",
+      "    7.466252  ]\n",
+      " [-15.109357    -1.8908516   -3.902047   ...  -7.9937053   -1.7277328\n",
+      "    7.293795  ]\n",
+      " [-15.825258     0.51061547  -2.476412   ...  -7.306231    -1.2499074\n",
+      "    7.69989   ]]\n"
      ]
     },
     {
@@ -726,26 +751,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.07480468  1.0148212  -0.44328105 ... -1.3911552  -0.78655094\n",
-      "  -0.7207247 ]\n",
-      " [-2.799437    1.1824923  -2.1693401  ... -1.4877348  -1.2589675\n",
-      "  -0.4212661 ]\n",
-      " [-1.6104      0.00404462 -2.7286115  ... -0.66142565 -0.59261125\n",
-      "  -0.61701185]\n",
+      "[[-15.542916    -0.91045094  -7.36014    ...  -8.97842     -5.407525\n",
+      "    7.603818  ]\n",
+      " [-14.988806    -0.91125643  -5.5944624  ...  -3.4682074   -0.01910743\n",
+      "    6.888975  ]\n",
+      " [-15.784734     3.8314717   -6.208378   ... -10.686158    -5.603228\n",
+      "    6.7690516 ]\n",
       " ...\n",
-      " [-3.4467356   0.54792047 -1.8496662  ... -1.0453129  -1.5139419\n",
-      "  -0.4645679 ]\n",
-      " [-2.593028    1.152011   -2.428368   ... -1.0441059  -1.797775\n",
-      "  -0.37309414]\n",
-      " [-3.5681794   0.9330046  -1.8699456  ... -1.5799365  -1.3101511\n",
-      "  -0.8292255 ]]\n"
+      " [-15.173181     1.2875555   -3.8539486  ...  -5.5410814   -0.65423435\n",
+      "    7.466252  ]\n",
+      " [-15.109357    -1.8908516   -3.902047   ...  -7.9937053   -1.7277328\n",
+      "    7.293795  ]\n",
+      " [-15.825258     0.51061547  -2.476412   ...  -7.306231    -1.2499074\n",
+      "    7.69989   ]]\n"
      ]
     }
    ],
@@ -755,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -764,33 +789,53 @@
      "text": [
       "Training and evaluating svm...\n",
       "Saved svm classifier to trained_clfs\\trained_svm_classifier.pkl\n",
-      "svm: Acc - 0.9730, Hacc - 0.9444, NHacc - 0.9746\n",
+      "svm: Acc - 0.9459, Hacc - 0.7778, NHacc - 0.9556\n",
       "\n",
-      "          Hybrid-Recall: 1.0\n",
-      "          Hybrid-Precision: 0.4117647058823529\n",
-      "          f1-Score: 0.5833333333333334\n",
-      "          ROC AUC: 0.9751861042183623\n",
-      "          Accuracy: 0.9520383693045563\n",
+      "          Hybrid-Recall: 0.6428571428571429\n",
+      "          Hybrid-Precision: 0.3103448275862069\n",
+      "          f1-Score: 0.4186046511627907\n",
+      "          ROC AUC: 0.7966146756469337\n",
+      "          Accuracy: 0.9400479616306955\n",
       "          \n",
-      "Training and evaluating sgd...\n",
+      "Training and evaluating sgd...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Admin-62501\\anaconda3\\envs\\butterfly-detection\\lib\\site-packages\\sklearn\\linear_model\\_stochastic_gradient.py:723: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Admin-62501\\anaconda3\\envs\\butterfly-detection\\lib\\site-packages\\sklearn\\linear_model\\_stochastic_gradient.py:723: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Admin-62501\\anaconda3\\envs\\butterfly-detection\\lib\\site-packages\\sklearn\\linear_model\\_stochastic_gradient.py:723: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Admin-62501\\anaconda3\\envs\\butterfly-detection\\lib\\site-packages\\sklearn\\linear_model\\_stochastic_gradient.py:723: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Saved sgd classifier to trained_clfs\\trained_sgd_classifier.pkl\n",
-      "sgd: Acc - 0.9790, Hacc - 0.6111, NHacc - 1.0000\n",
+      "sgd: Acc - 0.9520, Hacc - 0.2222, NHacc - 0.9937\n",
       "\n",
-      "          Hybrid-Recall: 1.0\n",
-      "          Hybrid-Precision: 0.4117647058823529\n",
-      "          f1-Score: 0.5833333333333334\n",
-      "          ROC AUC: 0.9751861042183623\n",
-      "          Accuracy: 0.9520383693045563\n",
+      "          Hybrid-Recall: 0.6428571428571429\n",
+      "          Hybrid-Precision: 0.3103448275862069\n",
+      "          f1-Score: 0.4186046511627907\n",
+      "          ROC AUC: 0.7966146756469337\n",
+      "          Accuracy: 0.9400479616306955\n",
       "          \n",
       "Training and evaluating knn...\n",
       "Saved knn classifier to trained_clfs\\trained_knn_classifier.pkl\n",
-      "knn: Acc - 0.9820, Hacc - 0.6667, NHacc - 1.0000\n",
+      "knn: Acc - 0.9580, Hacc - 0.2222, NHacc - 1.0000\n",
       "\n",
-      "          Hybrid-Recall: 1.0\n",
-      "          Hybrid-Precision: 0.4117647058823529\n",
-      "          f1-Score: 0.5833333333333334\n",
-      "          ROC AUC: 0.9751861042183623\n",
-      "          Accuracy: 0.9520383693045563\n",
+      "          Hybrid-Recall: 0.7857142857142857\n",
+      "          Hybrid-Precision: 0.3548387096774194\n",
+      "          f1-Score: 0.4888888888888889\n",
+      "          ROC AUC: 0.8680432470755051\n",
+      "          Accuracy: 0.9448441247002398\n",
       "          \n"
      ]
     }
@@ -802,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
