no visible bugs

--- a/DINO_notebook/DINO_notebook.ipynb
+++ b/DINO_notebook/DINO_notebook.ipynb
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create sample subset of data for example"
+    "## Start here"
    ]
   },
   {
@@ -433,21 +433,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'training'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Add your path of library\u001b[39;00m\n\u001b[0;32m      7\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../DINO_train\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtraining\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'training'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import sys\n",
@@ -473,21 +461,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filtering bad urls: 0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filtering bad urls: 12082it [00:12, 989.46it/s]"
+      "Filtering bad urls: 12082it [00:16, 726.98it/s]"
      ]
     },
     {
@@ -525,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -568,8 +549,8 @@
      "text": [
       "Created base dataset with 9665 samples\n",
       "Created base dataset with 2417 samples\n",
-      "<torch.utils.data.dataloader.DataLoader object at 0x000001D176AA8610>\n",
-      "<torch.utils.data.dataloader.DataLoader object at 0x000001D17724EB90>\n"
+      "<torch.utils.data.dataloader.DataLoader object at 0x000002065259AEC0>\n",
+      "<torch.utils.data.dataloader.DataLoader object at 0x00000206527B8370>\n"
      ]
     }
    ],
@@ -589,8 +570,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting features: 100%|██████████| 2417/2417 [1:41:03<00:00,  2.51s/it]\n",
-      "Extracting features:   0%|          | 0/605 [00:00<?, ?it/s]"
+      "Extracting features:   0%|          | 2/2417 [00:36<10:33:57, 15.75s/it]"
      ]
     }
    ],
