update model.py for transform white background function

--- a/DINO_notebook/DINO_notebook.ipynb
+++ b/DINO_notebook/DINO_notebook.ipynb
@@ -74,7 +74,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filtering bad urls: 12082it [00:16, 726.98it/s]"
+      "Filtering bad urls: 0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Filtering bad urls: 4090it [00:02, 1398.78it/s]"
      ]
     },
     {
@@ -82,7 +89,7 @@
      "output_type": "stream",
      "text": [
       "Bad rows: 0\n",
-      "(9665, 11)\n"
+      "(3272, 11)\n"
      ]
     },
     {
@@ -153,35 +160,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created base dataset with 9665 samples\n",
-      "Created base dataset with 2417 samples\n",
-      "<torch.utils.data.dataloader.DataLoader object at 0x000002065259AEC0>\n",
-      "<torch.utils.data.dataloader.DataLoader object at 0x00000206527B8370>\n"
+      "Created base dataset with 3272 samples\n",
+      "Created base dataset with 818 samples\n",
+      "Compose(\n",
+      "    Resize(size=(224, 224), interpolation=bilinear, max_size=None, antialias=True)\n",
+      "    Lambda()\n",
+      "    ToTensor()\n",
+      "    Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+      ")\n"
      ]
     }
    ],
    "source": [
     "# Create dataloader\n",
     "tr_sig_dloader, test_dl = training.prepare_data_loaders(train_data, test_data)\n",
-    "print(tr_sig_dloader)\n",
-    "print(test_dl)"
+    "print(training.data_transforms())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting features:   9%|▉         | 218/2417 [10:56<1:39:07,  2.70s/it]"
+      "Extracting features:  34%|███▍      | 278/818 [28:53<37:07,  4.13s/it]  "
      ]
     }
    ],
    "source": [
-    "# Extract visual features from model\n",
+    "# Extract visual features from model \n",
     "try: \n",
     "    tr_features, tr_labels, test_features, test_labels = training.extract_features(tr_sig_dloader, test_dl, model)\n",
     "    print(tr_features)\n",
@@ -192,26 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.07480468  1.0148212  -0.44328105 ... -1.3911552  -0.78655094\n",
-      "  -0.7207247 ]\n",
-      " [-2.799437    1.1824923  -2.1693401  ... -1.4877348  -1.2589675\n",
-      "  -0.4212661 ]\n",
-      " [-1.6104      0.00404462 -2.7286115  ... -0.66142565 -0.59261125\n",
-      "  -0.61701185]\n",
-      " ...\n",
-      " [-3.4467356   0.54792047 -1.8496662  ... -1.0453129  -1.5139419\n",
-      "  -0.4645679 ]\n",
-      " [-2.593028    1.152011   -2.428368   ... -1.0441059  -1.797775\n",
-      "  -0.37309414]\n",
-      " [-3.5681794   0.9330046  -1.8699456  ... -1.5799365  -1.3101511\n",
-      "  -0.8292255 ]]\n"
+     "ename": "NameError",
+     "evalue": "name 'tr_features' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtr_features\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tr_features' is not defined"
      ]
     }
    ],
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -230,33 +232,33 @@
      "text": [
       "Training and evaluating svm...\n",
       "Saved svm classifier to trained_clfs\\trained_svm_classifier.pkl\n",
-      "svm: Acc - 0.9730, Hacc - 0.9444, NHacc - 0.9746\n",
+      "svm: Acc - 0.9863, Hacc - 0.9729, NHacc - 1.0000\n",
       "\n",
-      "          Hybrid-Recall: 1.0\n",
-      "          Hybrid-Precision: 0.4117647058823529\n",
-      "          f1-Score: 0.5833333333333334\n",
-      "          ROC AUC: 0.9751861042183623\n",
-      "          Accuracy: 0.9520383693045563\n",
+      "          Hybrid-Recall: 0.9976190476190476\n",
+      "          Hybrid-Precision: 0.95662100456621\n",
+      "          f1-Score: 0.9766899766899767\n",
+      "          ROC AUC: 0.9749401770758555\n",
+      "          Accuracy: 0.9755501222493888\n",
       "          \n",
       "Training and evaluating sgd...\n",
       "Saved sgd classifier to trained_clfs\\trained_sgd_classifier.pkl\n",
-      "sgd: Acc - 0.9790, Hacc - 0.6111, NHacc - 1.0000\n",
+      "sgd: Acc - 0.9847, Hacc - 0.9759, NHacc - 0.9938\n",
       "\n",
       "          Hybrid-Recall: 1.0\n",
-      "          Hybrid-Precision: 0.4117647058823529\n",
-      "          f1-Score: 0.5833333333333334\n",
-      "          ROC AUC: 0.9751861042183623\n",
-      "          Accuracy: 0.9520383693045563\n",
+      "          Hybrid-Precision: 0.9567198177676538\n",
+      "          f1-Score: 0.9778812572759022\n",
+      "          ROC AUC: 0.9761306532663316\n",
+      "          Accuracy: 0.9767726161369193\n",
       "          \n",
       "Training and evaluating knn...\n",
       "Saved knn classifier to trained_clfs\\trained_knn_classifier.pkl\n",
-      "knn: Acc - 0.9820, Hacc - 0.6667, NHacc - 1.0000\n",
+      "knn: Acc - 0.9908, Hacc - 0.9819, NHacc - 1.0000\n",
       "\n",
-      "          Hybrid-Recall: 1.0\n",
-      "          Hybrid-Precision: 0.4117647058823529\n",
-      "          f1-Score: 0.5833333333333334\n",
-      "          ROC AUC: 0.9751861042183623\n",
-      "          Accuracy: 0.9520383693045563\n",
+      "          Hybrid-Recall: 0.9976190476190476\n",
+      "          Hybrid-Precision: 0.95662100456621\n",
+      "          f1-Score: 0.9766899766899767\n",
+      "          ROC AUC: 0.9749401770758555\n",
+      "          Accuracy: 0.9755501222493888\n",
       "          \n"
      ]
     }
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
